new report after lunch

--- a/WarrantyReport2_files/Footer_LightBlue.html
+++ b/WarrantyReport2_files/Footer_LightBlue.html
@@ -20,7 +20,7 @@
    <td WIDTH="100%" HEIGHT="18">
     <table CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
      <tr>
-       <td class="Title" width="90%">WarrantyReport2 for Physical Data Model 'WarrantyDb1' (WarrantyDb1)</td>
+       <td class="Title" width="90%">WarrantyReport for Physical Data Model 'WarrantyDb1' (WarrantyDb1)</td>
        <td class="Title" width="*" align="right">2017/7/27</td>
      </tr>
     </table>
