--- a/WarrantyReport2_files/Warr16.htm
+++ b/WarrantyReport2_files/Warr16.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
-<title>WarrantyReport2
+<title>WarrantyReport
 </title>
 <link href="LightBlue_Theme.css" type="text/css" rel="stylesheet">
 </head>
@@ -46,7 +46,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr9.htm#176">Products</a>
+<p align="left"><a href="Warr8.htm#96">Products</a>
 </p>
 </td>
 </tr>
@@ -56,7 +56,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr10.htm#242">ProductWarranty</a>
+<p align="left"><a href="Warr9.htm#162">ProductWarranty</a>
 </p>
 </td>
 </tr>
@@ -121,11 +121,11 @@ go<br />
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr9.htm#186">ProductId</a>
+<p align="left"><a href="Warr8.htm#106">ProductId</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr10.htm#259">ProductId</a>
+<p align="left"><a href="Warr9.htm#179">ProductId</a>
 </p>
 </td>
 </tr>
