--- a/WarrantyReport2_files/Warr18.htm
+++ b/WarrantyReport2_files/Warr18.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
-<title>WarrantyReport2
+<title>WarrantyReport
 </title>
 <link href="LightBlue_Theme.css" type="text/css" rel="stylesheet">
 </head>
@@ -40,7 +40,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr8.htm#122">Permissions</a>
+<p align="left"><a href="Warr7.htm#42">Permissions</a>
 </p>
 </td>
 </tr>
@@ -50,7 +50,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr11.htm#309">RolePermission</a>
+<p align="left"><a href="Warr10.htm#229">RolePermission</a>
 </p>
 </td>
 </tr>
@@ -115,11 +115,11 @@ go<br />
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr8.htm#132">PermissionId</a>
+<p align="left"><a href="Warr7.htm#52">PermissionId</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr11.htm#333">PermissionId</a>
+<p align="left"><a href="Warr10.htm#253">PermissionId</a>
 </p>
 </td>
 </tr>
