--- a/WarrantyReport2_files/Warr20.htm
+++ b/WarrantyReport2_files/Warr20.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
-<title>WarrantyReport2
+<title>WarrantyReport
 </title>
 <link href="LightBlue_Theme.css" type="text/css" rel="stylesheet">
 </head>
@@ -40,7 +40,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr14.htm#448">Users</a>
+<p align="left"><a href="Warr13.htm#368">Users</a>
 </p>
 </td>
 </tr>
@@ -50,7 +50,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr13.htm#406">SearchHistory</a>
+<p align="left"><a href="Warr12.htm#326">SearchHistory</a>
 </p>
 </td>
 </tr>
@@ -115,11 +115,11 @@ go<br />
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr14.htm#459">UserId</a>
+<p align="left"><a href="Warr13.htm#379">UserId</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr13.htm#423">UserId</a>
+<p align="left"><a href="Warr12.htm#343">UserId</a>
 </p>
 </td>
 </tr>
