--- a/WarrantyReport2_files/Warr5.htm
+++ b/WarrantyReport2_files/Warr5.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
-<title>WarrantyReport2
+<title>WarrantyReport
 </title>
 <link href="LightBlue_Theme.css" type="text/css" rel="stylesheet">
 </head>
@@ -33,91 +33,91 @@
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr7.htm#42">Customers</a>
+<p align="left"><a href="Warr7.htm#42">Permissions</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr7.htm#42">Customers</a>
+<p align="left"><a href="Warr7.htm#42">Permissions</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr8.htm#122">Permissions</a>
+<p align="left"><a href="Warr8.htm#96">Products</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr8.htm#122">Permissions</a>
+<p align="left"><a href="Warr8.htm#96">Products</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr9.htm#176">Products</a>
+<p align="left"><a href="Warr9.htm#162">ProductWarranty</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr9.htm#176">Products</a>
+<p align="left"><a href="Warr9.htm#162">ProductWarranty</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr10.htm#242">ProductWarranty</a>
+<p align="left"><a href="Warr10.htm#229">RolePermission</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr10.htm#242">ProductWarranty</a>
+<p align="left"><a href="Warr10.htm#229">RolePermission</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr11.htm#309">RolePermission</a>
+<p align="left"><a href="Warr11.htm#278">Roles</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr11.htm#309">RolePermission</a>
+<p align="left"><a href="Warr11.htm#278">Roles</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr12.htm#358">Roles</a>
+<p align="left"><a href="Warr12.htm#326">SearchHistory</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr12.htm#358">Roles</a>
+<p align="left"><a href="Warr12.htm#326">SearchHistory</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr13.htm#406">SearchHistory</a>
+<p align="left"><a href="Warr13.htm#368">Users</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr13.htm#406">SearchHistory</a>
+<p align="left"><a href="Warr13.htm#368">Users</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr14.htm#448">Users</a>
+<p align="left"><a href="Warr14.htm#442">WarrantyCards</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr14.htm#448">Users</a>
+<p align="left"><a href="Warr14.htm#442">WarrantyCards</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr15.htm#522">WarrantyCards</a>
+<p align="left"><a href="Warr15.htm#515">WarrantyOwners</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr15.htm#522">WarrantyCards</a>
+<p align="left"><a href="Warr15.htm#515">WarrantyOwners</a>
 </p>
 </td>
 </tr>
