--- a/WarrantyReport2_files/Home_LightBlue.html
+++ b/WarrantyReport2_files/Home_LightBlue.html
@@ -40,7 +40,7 @@ TABLE.TitleFrame {
             </tr>
             <tr>
               <td class="Title" align="right">Report:</td>
-              <td class="Title">WarrantyReport2</td>
+              <td class="Title">WarrantyReport</td>
             </tr>
             <tr>
               <td class="Title" align="right">Version:</td>
