--- a/WarrantyReport2_files/Warr22.htm
+++ b/WarrantyReport2_files/Warr22.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
-<title>WarrantyReport2
+<title>WarrantyReport
 </title>
 <link href="LightBlue_Theme.css" type="text/css" rel="stylesheet">
 </head>
@@ -50,7 +50,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr7.htm#42">Customers</a>
+<p align="left"><a href="Warr15.htm#515">WarrantyOwners</a>
 </p>
 </td>
 </tr>
@@ -61,13 +61,13 @@
 <table class="Text" border="1" cellpadding="3" cellspacing="1" width="100%"><tr><td>
 <p align="left">if exists (select 1<br />
    from sys.sysreferences r join sys.sysobjects o on (o.id = r.constid and o.type = 'F')<br />
-   where r.fkeyid = object_id('Customers') and o.name = 'FK_CUSTOMER_REFERENCE_COUNTRY')<br />
-alter table Customers<br />
-   drop constraint FK_CUSTOMER_REFERENCE_COUNTRY<br />
+   where r.fkeyid = object_id('WarrantyOwners') and o.name = 'FK_WARRANTY_REFERENCE_COUNTRY')<br />
+alter table WarrantyOwners<br />
+   drop constraint FK_WARRANTY_REFERENCE_COUNTRY<br />
 go<br />
 <br />
-alter table Customers<br />
-   add constraint FK_CUSTOMER_REFERENCE_COUNTRY foreign key (CountryId)<br />
+alter table WarrantyOwners<br />
+   add constraint FK_WARRANTY_REFERENCE_COUNTRY foreign key (CountryId)<br />
       references Country (CountryId)<br />
 go<br />
 
@@ -119,7 +119,7 @@ go<br />
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr7.htm#78">CountryId</a>
+<p align="left"><a href="Warr15.htm#551">CountryId</a>
 </p>
 </td>
 </tr>
