--- a/WarrantyReport2_files/Warr24.htm
+++ b/WarrantyReport2_files/Warr24.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
-<title>WarrantyReport2
+<title>WarrantyReport
 </title>
 <link href="LightBlue_Theme.css" type="text/css" rel="stylesheet">
 </head>
@@ -50,7 +50,7 @@
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr10.htm#242">ProductWarranty</a>
+<p align="left"><a href="Warr9.htm#162">ProductWarranty</a>
 </p>
 </td>
 </tr>
@@ -119,7 +119,7 @@ go<br />
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr10.htm#272">CountryId</a>
+<p align="left"><a href="Warr9.htm#192">CountryId</a>
 </p>
 </td>
 </tr>
