--- a/WarrantyReport2_files/Warr1.htm
+++ b/WarrantyReport2_files/Warr1.htm
@@ -20,6 +20,7 @@
 <tr>
 <td><img border="0" src="Warr0.png" alt="Warranty" name="Warr0.png" usemap="#Warr0_map" /></td>
 <map name="Warr0_map">
+<area shape="rect" coords="252,37,304,80" href="Warr13.htm#356" alt="Table Source" />
 <area shape="rect" coords="208,165,367,207" href="Warr6.htm#12" alt="Table Country" />
 <area shape="rect" coords="272,262,439,313" href="Warr12.htm#314" alt="Table SearchHistory" />
 <area shape="rect" coords="2,395,169,454" href="Warr11.htm#266" alt="Table Roles" />
@@ -27,9 +28,9 @@
 <area shape="rect" coords="245,425,411,493" href="Warr7.htm#42" alt="Table Permissions" />
 <area shape="rect" coords="368,154,536,231" href="Warr8.htm#96" alt="Table Products" />
 <area shape="rect" coords="362,3,541,80" href="Warr9.htm#156" alt="Table ProductWarranty" />
-<area shape="rect" coords="2,264,173,358" href="Warr13.htm#356" alt="Table Users" />
-<area shape="rect" coords="0,0,188,103" href="Warr15.htm#509" alt="Table WarrantyOwners" />
-<area shape="rect" coords="0,132,200,234" href="Warr14.htm#430" alt="Table WarrantyCards" />
+<area shape="rect" coords="2,264,173,358" href="Warr14.htm#363" alt="Table Users" />
+<area shape="rect" coords="0,0,188,103" href="Warr16.htm#516" alt="Table WarrantyOwners" />
+<area shape="rect" coords="0,132,200,234" href="Warr15.htm#437" alt="Table WarrantyCards" />
 </map>
 </tr>
 </table>
